--- a/users/templates/users/profile_detail.html
+++ b/users/templates/users/profile_detail.html
@@ -9,8 +9,14 @@
 
 <h3>{{ user.get_full_name }}</h3>
 <strong>Usuário:</strong> {{ user.username }}<br>
-<strong>Curso:</strong> {{user.aluno.get_curso_display}}<br>
-<strong>Ano e Semestre de PFE:</strong> {{user.aluno.anoPFE}}.{{user.aluno.semestrePFE}} <small>(ou posterior)</small><br>
+{% if aluno %}
+  <strong>Curso:</strong> {{user.aluno.get_curso_display}}<br>
+  <strong>Ano e Semestre de PFE:</strong> {{user.aluno.anoPFE}}.{{user.aluno.semestrePFE}} <small>(ou posterior)</small><br>
+{% elif professor %}
+  <strong>Perfil:</strong> professor<br>
+{% elif parceiro %}
+  <strong>Perfil:</strong> parceiro<br>
+{% endif %}
 <br><br>
 <form action="{% url 'password_change' %}">
   <input type="submit" value="Atualizar Senha" />
