--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -6,8 +6,10 @@
 {% endcomment %}
 
 {% block content %}
-    <a href="{% url 'fechados' %}">          <h5>Listagem Detalhada de Projetos Fechados</h5>         </a>
-    <a href="{% url 'bancas' %}">            <h5>Calendário das Bancas</h5>                     </a>
+    <a href="{% url 'fechados' %}">          <h5>Listagem Detalhada de Projetos Fechados</h5>    </a>
+    <a href="{% url 'bancas' %}">            <h5>Calendário das Bancas</h5>                      </a>
+    <a href="{% url 'dinamicas' %}">         <h5>Calendário das Dinâmicas</h5>                   </a>
+
     <hr>
 
     <h5>Listagem de Projetos Publicados</h5>(não necessariamente fechados)
