atualizada tabela de alunos aplicando

--- a/projetos/templates/projetos/fechados.html
+++ b/projetos/templates/projetos/fechados.html
@@ -117,12 +117,12 @@
               ],
             }],
             labels: [
-              '#1 [{% widthratio prioridades.0 nalunos 100 %}%]',
-              '#2 [{% widthratio prioridades.1 nalunos 100 %}%]',
-              '#3 [{% widthratio prioridades.2 nalunos 100 %}%]',
-              '#4 [{% widthratio prioridades.3 nalunos 100 %}%]',
-              '#5 [{% widthratio prioridades.4 nalunos 100 %}%]',
-              '>= #6 [{% widthratio prioridades.5 nalunos 100 %}%]',
+              '#1 [{% widthratio qtd_prioridades.0 nalunos 100 %}%]',
+              '#2 [{% widthratio qtd_prioridades.1 nalunos 100 %}%]',
+              '#3 [{% widthratio qtd_prioridades.2 nalunos 100 %}%]',
+              '#4 [{% widthratio qtd_prioridades.3 nalunos 100 %}%]',
+              '#5 [{% widthratio qtd_prioridades.4 nalunos 100 %}%]',
+              '>= #6 [{% widthratio qtd_prioridades.5 nalunos 100 %}%]',
             ]
           },
           options: {
