--- a/projetos/templates/projetos/organizacoes.html
+++ b/projetos/templates/projetos/organizacoes.html
@@ -16,8 +16,10 @@
       <tr>
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Sigla</th>
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
+        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Projetos <br>Submetidos</th>
+        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Projetos <br>Fechados</th>
       </tr>
-      {% for organizacao in organizacoes_list %} 
+      {% for organizacao,fechados in organizacoes_list %} 
         <tr class="item">
           <td>
             <a href="{% url 'organizacao' organizacao.login %}"> <!-- UM DIA ACERTAR ISSO -->
@@ -29,11 +31,19 @@
               {{organizacao.nome_empresa}}
             </a>
           </td>
+          <td class="text-center">
+            {{organizacao.projeto_set.count}}
+          </td>
+          <td class="text-center">
+            {{fechados}}
+          </td>
         </tr>
       {% endfor %}
     </table>
     <p>&nbsp;</p>
-    <strong>Número Total de Organizações Parceiras:</strong> {{ organizacoes_list.count }}
+    <strong>Total de Organizações Parceiras:</strong> {{ total_organizacoes }}<br>
+    <strong>Total de Projetos Submetidos:</strong> {{ total_submetidos }}<br>
+    <strong>Total de Projetos Fechados:</strong> {{ total_fechados }}<br>
   {% else %}
     <p>Não existem organizações cadastradas.</p>
   {% endif %}
