--- a/projetos/templates/projetos/encontros.html
+++ b/projetos/templates/projetos/encontros.html
@@ -19,8 +19,18 @@
 
     <h3>Datas para encontros</h3>
     <br>
-    <h4>Seu projeto: {{projeto.titulo}}</h4>
-    <br>
+    {% if projeto.titulo_final %}
+        <style>
+            h4 {
+                display: inline;
+            }
+        </style>
+        <h4>Seu projeto: {{projeto.titulo_final}}</h4>
+        <small> <br>Título Provisório: {{projeto.titulo}}</small>
+    {% else %}
+        <h4>Seu projeto: {{projeto.titulo}}</h4>
+    {% endif %}
+    <br><br>
     <div class="control"></div>
         {% for e in encontros %}
             <label class="radio" {% if e.projeto and e.projeto != projeto %}data-toggle="tooltip" data-placement="bottom" title="Horário já selecionado por outro grupo!"{% endif %}>
