--- a/projetos/templates/projetos/projeto_detail.html
+++ b/projetos/templates/projetos/projeto_detail.html
@@ -6,7 +6,15 @@
 {% endcomment %}
 
 {% block content %}
-  <h3>Título: {{ projeto.titulo }}</h3>
+  {% if projeto.titulo_final %}
+    <style>
+        h3 {display: inline;}
+    </style>
+    <h3>Título: {{projeto.titulo_final}}</h3>
+    <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{projeto.titulo}}</small><br>
+  {% else %}
+    <h3>Título: {{projeto.titulo}}</h3>
+  {% endif %}
   <strong>Descrição:</strong> {{ projeto.descricao|linebreaks }}
   <strong>Expectativas de resultados/entregas :</strong> {{ projeto.expectativas|linebreaks }}
   <strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ projeto.areas|linebreaks }}
