--- a/projetos/templates/projetos/todos.html
+++ b/projetos/templates/projetos/todos.html
@@ -21,7 +21,12 @@
       {% for projeto,prioridades in mylist %} 
         {% if projeto.disponivel %}
           <a href="{% url 'completo' projeto.id %}" class="dark-blue-bold"> 
-            {{projeto.titulo}}<br>
+            {% if projeto.titulo_final %}
+              {{projeto.titulo_final}}<br>
+              <small>Título Provisório: {{projeto.titulo}}</small><br>
+            {% else %}
+              {{projeto.titulo}}<br>
+            {% endif %}
           </a>
           <p style="margin-left:1em;">Empresa: <a href="{% url 'organizacao' projeto.empresa.login %}">
               {{ projeto.empresa.nome_empresa }}
