--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -21,7 +21,12 @@
     {% for projeto in projetos %}
       {% if projeto.alocacao_set.all.count > 0 %}
         <a href="{% url 'completo' projeto.id %}">
-        {{projeto.titulo}} [{{projeto.ano}}.{{projeto.semestre}}] ({{projeto.empresa.nome_empresa}})
+        {% if projeto.titulo_final %}
+          {{projeto.titulo_final}}
+        {% else %}
+          {{projeto.titulo}}
+        {% endif %}
+        [{{projeto.ano}}.{{projeto.semestre}}] ({{projeto.empresa.nome_empresa}})
         { {{ projeto.alocacao_set.all.count }} aluno(s) }
         <br>
         </a>
