basicamente encerrado sistema de reembolso

--- a/projetos/templates/index_aluno.html
+++ b/projetos/templates/index_aluno.html
@@ -103,6 +103,8 @@
         <h5>Agendar horário das dinâmicas</h5>
     </a>
 
+    <!-- a href=" reembolso " > <h5> Pedido de Reembolso </h5> < / a >  -->
+
     <div id="projeto">Você não está alocado em um projeto.</div>
     <div id="vencido">Prazo para a seleção dos projetos vencido.</div>
     
