--- a/projetos/templates/projetos/projeto_detail.html
+++ b/projetos/templates/projetos/projeto_detail.html
@@ -19,9 +19,13 @@
   <strong>Expectativas de resultados/entregas :</strong> {{ projeto.expectativas|linebreaks }}
   <strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ projeto.areas|linebreaks }}
   <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ projeto.recursos|linebreaks }}
+  {% if projeto.anexo %}
+    <strong>Anexo :</strong>
+    <a class="text-success" href="../..{{MEDIA_URL}}{{projeto.anexo}}">{{projeto.anexo}}</a>
+  {% endif %}
   <hr>
   <h3>Empresa: {{ projeto.empresa.nome_empresa }}</h3>
-  <strong>endereço:</strong> {{ projeto.empresa.endereco|linebreaks }}
-  <strong>website:</strong> <a href="{{ projeto.empresa.website }}"> {{ projeto.empresa.website }} </a>
+  <p><strong>endereço:</strong> <a class="tabulado" href="http://maps.google.com/maps?q={{organization.endereco}}">{{ projeto.empresa.endereco|linebreaks }}</a></p>
+  <p><strong>website:</strong>  <a class="tabulado" href="{{ projeto.empresa.website }}"> {{ projeto.empresa.website }} </a></p>
   <p>&nbsp;</p>
 {% endblock %}
