enviando mensagens dos avisos de coordenação de PFE

--- a/projetos/templates/projetos/avisos.html
+++ b/projetos/templates/projetos/avisos.html
@@ -26,7 +26,7 @@
         </tr>
   
       {% for a in avisos %} 
-        <tr>
+        <tr class="{% if a.delta < dias_passados %}text-success{% else %}text-info{% endif %}" >
           <td>
             {{a.delta}}
           </td>
