mensagem mais clara de como mandar o zip das notas

--- a/projetos/templates/projetos/reembolso.html
+++ b/projetos/templates/projetos/reembolso.html
@@ -58,6 +58,7 @@ function mascara(i){
     <br>
 
     Arquivo com cópias das notas fiscais<br>
+    <small>(se forem vários arquivos coloque eles em um arquivo zip para enviar)<br></small>
     <input type="file" name="arquivo" required>
 
     <br>
