--- a/projetos/templates/base.html
+++ b/projetos/templates/base.html
@@ -33,10 +33,16 @@
     <div class="topnav">
       <a class="active">
 
-        <img onclick="location.href='{% if user.tipo_de_usuario == 1 %}{% url 'index' %}{% else %}{% url 'professor' %}{% endif %}'"
+        <img 
+        {% if user.is_authenticated %}
+          onclick="location.href='{% if user.tipo_de_usuario == 1 %}{% url 'index' %}{% else %}{% url 'professor' %}{% endif %}'"
+        {% endif %}
         src="{% static 'images/logoInsper.png' %}" alt="Insper" style="width:59px;height:23px;">
 
-        <b onclick="location.href='{% if user.tipo_de_usuario == 1 %}{% url 'index' %}{% else %}{% url 'professor' %}{% endif %}'"
+        <b 
+        {% if user.is_authenticated %}
+          onclick="location.href='{% if user.tipo_de_usuario == 1 %}{% url 'index' %}{% else %}{% url 'professor' %}{% endif %}'"
+        {% endif %}
         id="pfelogo">PFE</b> 
 
         {% if user.is_authenticated %}
