--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -7,7 +7,19 @@
 
 {% block head %}
 <script src="https://www.w3schools.com/lib/w3.js"></script>
-<script>var fechados = 0</script>
+<script>
+  var fechados = 0
+  var tmp_computacao = 0
+  var tmp_mecatronica = 0
+  var tmp_mecanica = 0
+  var alunos_computacao = 0
+  var alunos_mecatronica = 0
+  var alunos_mecanica = 0
+  var projeto_computacao = 0
+  var projeto_mecatronica = 0
+  var projeto_mecanica = 0
+  var projeto_multidisciplinar = 0
+</script>
 {% endblock %}
 
 {% block content %}
@@ -26,6 +38,10 @@
         <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Projeto</th>
         <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Período</th>
         <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Organização</th>
+        <th>Aluno1</th>
+        <th>Aluno2</th>
+        <th>Aluno3</th>
+        <th>Aluno4</th>
       </tr>      
       {% for projeto in projetos %} 
       <tr class="item">
@@ -47,7 +63,7 @@
             {% endif %}
           </a>
         </td>
-        <td>
+        <td class="text-center">
             {{projeto.ano}}.{{projeto.semestre}}
         </td>
         <td>
@@ -55,12 +71,60 @@
             {{ projeto.empresa.nome_empresa }}
           </a>
         </td>
+        <td>
+          {% if projeto.perfil_aluno1_computacao %}C<script>tmp_computacao += 1</script>{% endif %}
+          {% if projeto.perfil_aluno1_mecatronica %}X<script>tmp_mecatronica += 1</script>{% endif %}
+          {% if projeto.perfil_aluno1_mecanica %}M<script>tmp_mecanica += 1</script>{% endif %}
+        </td>
+        <td>
+          {% if projeto.perfil_aluno2_computacao %}C<script>tmp_computacao += 1</script>{% endif %}
+          {% if projeto.perfil_aluno2_mecatronica %}X<script>tmp_mecatronica += 1</script>{% endif %}
+          {% if projeto.perfil_aluno2_mecanica %}M<script>tmp_mecanica += 1</script>{% endif %}
+        </td>
+        <td>
+          {% if projeto.perfil_aluno3_computacao %}C<script>tmp_computacao += 1</script>{% endif %}
+          {% if projeto.perfil_aluno3_mecatronica %}X<script>tmp_mecatronica += 1</script>{% endif %}
+          {% if projeto.perfil_aluno3_mecanica %}M<script>tmp_mecanica += 1</script>{% endif %}
+        </td>
+        <td>
+          {% if projeto.perfil_aluno4_computacao %}C<script>tmp_computacao += 1</script>{% endif %}
+          {% if projeto.perfil_aluno4_mecatronica %}X<script>tmp_mecatronica += 1</script>{% endif %}
+          {% if projeto.perfil_aluno4_mecanica %}M<script>tmp_mecanica += 1</script>{% endif %}
+        </td>
       </tr>
+      <script>
+        alunos_computacao += tmp_computacao;
+        alunos_mecatronica += tmp_mecatronica;
+        alunos_mecanica += tmp_mecanica;
+
+        if ( ( tmp_computacao >= 3 ) && (tmp_computacao >= tmp_mecatronica + tmp_mecanica ) ) {
+          projeto_computacao += 1;
+        } else if ( ( tmp_mecatronica >= 3 ) && (tmp_mecatronica >= tmp_computacao + tmp_mecanica ) ) {
+          projeto_mecatronica += 1; 
+        } else if ( ( tmp_mecanica >= 3 ) && (tmp_mecanica >= tmp_mecatronica + tmp_computacao ) ) {
+          projeto_mecanica += 1;
+        } else {
+          projeto_multidisciplinar += 1;
+        }
+
+        tmp_computacao = 0;
+        tmp_mecatronica = 0;
+        tmp_mecanica = 0;
+      </script>
       {% endfor %}
     </table>
     <p>&nbsp;</p>
     <strong>Número Total de Projetos Publicados:</strong> {{ projetos.count }}<br>
     <strong>Número Total de Projetos Fechados:</strong> <script>document.write(fechados);</script><br>
+    <p>&nbsp;</p>
+    <strong>Vagas para alunos de computação:</strong> <script>document.write(alunos_computacao);</script><br>
+    <strong>Vagas para alunos de mecatrônica:</strong> <script>document.write(alunos_mecatronica);</script><br>
+    <strong>Vagas para alunos de mecânica:</strong> <script>document.write(alunos_mecanica);</script><br>
+    <p>&nbsp;</p>
+    <strong>Projetos nativamente de computação:</strong> <script>document.write(projeto_computacao);</script><br>
+    <strong>Projetos nativamente de mecatrônica:</strong> <script>document.write(projeto_mecatronica);</script><br>
+    <strong>Projetos nativamente de mecânica:</strong> <script>document.write(projeto_mecanica);</script><br>
+    <strong>Projetos nativamente multidisciplinar:</strong> <script>document.write(projeto_multidisciplinar);</script><br>
   {% else %}
     <p>Não existem projetos disponíveis.</p>
   {% endif %}
