legenda dos cursos na tabela

--- a/projetos/templates/projetos/projetos_lista.html
+++ b/projetos/templates/projetos/projetos_lista.html
@@ -113,6 +113,7 @@
       </script>
       {% endfor %}
     </table>
+    <small>C: Computação | X: Mecatrônica | M: Mecânica</small><br>
     <p>&nbsp;</p>
     <strong>Número Total de Projetos Publicados:</strong> {{ projetos.count }}<br>
     <strong>Número Total de Projetos Fechados:</strong> <script>document.write(fechados);</script><br>
