--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -20,17 +20,27 @@
 {% endblock %}
 
 {% block content %}
+  <label for="filter">Edição:</label>
+  <select class="filter" data-tableId="projetos">
+    <option value="2018.2">2018.2</option>
+    <option value="2019.1">2019.1</option>
+    <option value="2019.2">2019.2</option>
+    <option value="2020.1" selected="selected">2020.1</option>
+    <option value="2020.2">2020.2</option>
+  </select>
+  <br>
+
   {% if mylist %}
     <ul style="padding:0;" class="chart">
-      <h3><li class="title" title="Projetos Disponíveis"></li></h3>
+      <h3><li class="title" title="Procura dos Projetos"></li></h3>
       <li></li>
       <li></li>
 
       {% for projeto,opcoes in mylist %} 
-        {% if projeto.disponivel %}
-      
           <a href="{% url 'completo' projeto.id %}"> 
-            <li class="title" title="{{ forloop.counter }}&ordm; : 
+            <li class="title" title="
+            {% if not projeto.disponivel%}X{% endif %}
+            {{ forloop.counter }}&ordm; :
             {% if projeto.titulo_final %}
               {{projeto.titulo_final}}
             {% else %}
@@ -44,10 +54,33 @@
           </li>
           <li></li>
 
-        {% endif %}
+        
       {% endfor %}
     </ul>
   
+    <!-- <script type="text/javascript">
+      $(".filter").change(function() {
+        var filterValue = $(this).val();
+        var row = $('.row'); 
+        row.hide()
+        var count_projects = 0
+        var count_alunos = 0
+        row.each(function(i, el) {
+             if($(el).attr('data-type') == filterValue) {
+                 $(el).show();
+                 count_projects = count_projects + 1
+                 count_alunos = count_alunos + $(el).find("TD").find("OL").children().length;
+             }
+        });
+        if ("todas" == filterValue) {
+          count_projects = {{ length }}
+          count_alunos = {{ nalunos }}
+          row.show();
+        }
+        document.getElementById("myCountProj").innerHTML = count_projects;
+        document.getElementById("myCountAlun").innerHTML = count_alunos
+      });
+    </script> -->
 
   {% else %}
       <p>Não existem projetos disponíveis.</p>
