Melhores textos para perguntas adicionais aos alunos.

--- a/projetos/templates/projetos/submissao.html
+++ b/projetos/templates/projetos/submissao.html
@@ -28,29 +28,31 @@ textarea {
 
   <form action="" method="post"> {% csrf_token %}  
 
-  Você já trabalhou e/ou estagio em alguma empresa de engenharia?<br>
-  Se sim qual/quais?<br>
-  <textarea name="trabalhou" rows="4" cols="80" maxlength="1000">{{trabalhou}}</textarea>
-  <br><br>
+    Você já trabalhou e/ou estagiou em alguma empresa de engenharia?<br>
+    Se sim, qual/quais?<br>
+    <textarea name="trabalhou" rows="4" cols="80" maxlength="1000">{{trabalhou}}</textarea>
+    <br><br>
 
-  Você já participou de atividade sociais?<br>
-  Se sim qual/quais?<br>
-  <textarea name="social" rows="4" cols="80" maxlength="1000">{{social}}</textarea>
-  <br><br>
+    Você já participou de atividades sociais?<br>
+    Se sim, qual/quais?<br>
+    <textarea name="social" rows="4" cols="80" maxlength="1000">{{social}}</textarea>
+    <br><br>
 
-  Você já participou de alguma entidade estudantil do Insper?<br>
-  <!-- Pegar Script de Projetos para preencher entidades -->
-  <textarea name="entidade" rows="4" cols="80" maxlength="1000">{{entidade}}</textarea>
-  <br>
-  <small><u>Lista de Entidades.</u></small>
-  <br><br>
+    Você já participou de alguma entidade estudantil do Insper?<br>
+    Liste as que você já participou?<br>
+    <!-- Pegar Script para preencher entidades automaticamente -->
+    <textarea name="entidade" rows="4" cols="80" maxlength="1000">{{entidade}}</textarea>
+    <br>
+    <small><u>Lista de Entidades.</u></small>
+    <br><br>
 
-  Você possui familiares em algum empresa que está aplicando? Ou empresa concorrente?<br>
-  Se sim qual/quais? E seu grau de relacionamento.<br>
-  <textarea name="familia" rows="4" cols="80" maxlength="1000">{{familia}}</textarea>
-  <br><br>
+    Você possui familiares em algum empresa que está aplicando? Ou empresa concorrente direta?<br>
+    Se sim, qual/quais? Qual seu grau de relacionamento.<br>
+    <textarea name="familia" rows="4" cols="80" maxlength="1000">{{familia}}</textarea>
+    <br><br>
 
-  <input type="submit" value="Enviar">
+    <input type="submit" value="Enviar">
+
   </form>
 
   <p>&nbsp;</p>
