Botao para voltar a página principal

--- a/users/templates/users/atualizado.html
+++ b/users/templates/users/atualizado.html
@@ -9,4 +9,8 @@
 Dados atualizados
 &nbsp;<br>
 &nbsp;<br>
+<a href="{% url 'index' %}"><h5>Voltar para Página Principal</h5></a>
+
+&nbsp;<br>
+&nbsp;<br>
 {% endblock %}
